Added base content and structure layout

--- a/index.html
+++ b/index.html
@@ -6,10 +6,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel Hildreth</title>
+    <link type="stylesheet" rel="style.css">
 </head>
 
 <body>
-
+    <nav id="navbar">
+        <ul class="nav-list">
+            <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="#work">My Work</a></li>
+            <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+    <div class="page-container">
+        <section id="about">
+            <main id="welcome-section">
+                <h1 class="welcome-title">Welcome, I'm Daniel.</h1>
+                <h2 class="welcome-subtitle">A Front End Web Developer.</h2>
+            </main>
+        </section>
+        <section id="work">
+            <section id="projects">
+                <h2 class="projects-intro">Here is some of my work.</h2>
+                <div class="project-tile">
+                    <h3 id="project-title">Tribute Page</h3>
+                </div>
+                <div class="project-tile">
+                    <h3 id="project-title">Survey Form</h3>
+                </div>
+                <div class="project-tile">
+                    <h3 id="project-title">Product Landing Page</h3>
+                </div>
+                <div class="project-tile">
+                    <h3 id="project-title">Technical Documentation Page</h3>
+                </div>
+                <div class="project-tile">
+                    <h3 id="project-title">LPSTORIES</h3>
+                </div>
+            </section>
+        </section>
+        <section id="contact">
+            <footer id="footer">
+                <h2 class="footer-contact">Contact me for feedback or questions.</h2>
+                <div class="profile-container">
+                    <a class="profile-link" id="profile-link" href="https://github.com/HanSolo0001" target="_blank">Github</a>
+                    <a class="profile-link" href="https://codepen.io/HanSolo0001" target="_blank">CodePen</a>
+                    <a class="profile-link" href="mailto:pillarite@gmail.com" target="_blank">Email Me</a>
+                </div>
+                <p>&copy; 2022 All Rights Reserved</p>
+            </footer>
+        </section>
+    </div>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 
 </html>
