--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel Hildreth</title>
-    <link type="stylesheet" rel="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -20,27 +20,33 @@
     <div class="page-container">
         <section id="about">
             <main id="welcome-section">
-                <h1 class="welcome-title">Welcome, I'm Daniel.</h1>
-                <h2 class="welcome-subtitle">A Front End Web Developer.</h2>
+                <h1 class="welcome-title">Welcome, I'm Daniel</h1>
+                <h2 class="welcome-subtitle">A Front End Web Developer</h2>
             </main>
         </section>
         <section id="work">
             <section id="projects">
-                <h2 class="projects-intro">Here is some of my work.</h2>
-                <div class="project-tile">
-                    <h3 id="project-title">Tribute Page</h3>
-                </div>
-                <div class="project-tile">
-                    <h3 id="project-title">Survey Form</h3>
-                </div>
-                <div class="project-tile">
-                    <h3 id="project-title">Product Landing Page</h3>
-                </div>
-                <div class="project-tile">
-                    <h3 id="project-title">Technical Documentation Page</h3>
-                </div>
-                <div class="project-tile">
-                    <h3 id="project-title">LPSTORIES</h3>
+                <h2 class="projects-intro">Here is some of my work</h2>
+                <div class="grid-container">
+                    <div class="project-tile">
+                        <img class="project-img" src="./img/tribute-page.png" alt="tribute page project">
+                        <h3 class="project-title">Tribute Page</h3>
+                    </div>
+                    <div class="project-tile">
+                        <h3 class="project-title">Survey Form</h3>
+                    </div>
+                    <div class="project-tile">
+                        <h3 class="project-title">Product Landing Page</h3>
+                    </div>
+                    <div class="project-tile">
+                        <h3 class="project-title">Technical Documentation Page</h3>
+                    </div>
+                    <div class="project-tile">
+                        <h3 class="project-title">LPSTORIES</h3>
+                    </div>
+                    <div class="project-tile">
+                        <h3 class="project-title">Day 21 Final Challenge Kevin Powell</h3>
+                    </div>
                 </div>
             </section>
         </section>
