Added social icons and project links

--- a/index.html
+++ b/index.html
@@ -29,22 +29,27 @@
                 <h2 class="projects-intro">Here is some of my work</h2>
                 <div class="grid-container">
                     <div class="project-tile">
-                        <img class="project-img" src="./img/tribute-page.png" alt="tribute page project">
+                        <a class="project-link" href="https://codepen.io/HanSolo0001/pen/KKvQGdN" target="_blank"><img class="project-img" src="./img/tribute-page.png" alt="tribute page"></a>
                         <h3 class="project-title">Tribute Page</h3>
                     </div>
                     <div class="project-tile">
+                        <a class="project-link" href="https://codepen.io/HanSolo0001/pen/MWvVGjN" target="_blank"><img class="project-img" src="./img/survey-form.png" alt="survey form"></a>
                         <h3 class="project-title">Survey Form</h3>
                     </div>
                     <div class="project-tile">
+                        <a class="project-link" href="https://codepen.io/HanSolo0001/pen/dyzKGbY" target="_blank"><img class="project-img" src="./img/product-landing-page.png" alt="product landing page"></a>
                         <h3 class="project-title">Product Landing Page</h3>
                     </div>
                     <div class="project-tile">
+                        <a class="project-link" href="https://codepen.io/HanSolo0001/pen/qBPEPKW" target="_blank"><img class="project-img" src="./img/technical-documentation-page.png" alt="technical technical documentation page"></a>
                         <h3 class="project-title">Technical Documentation Page</h3>
                     </div>
                     <div class="project-tile">
-                        <h3 class="project-title">LPSTORIES</h3>
+                        <a class="project-link" href="https://lpstories.com/index.html" target="_blank"><img class="project-img" src="./img/lpstories-page.png" alt="lpstories website"></a>
+                        <h3 class="project-title">LPSTORIES Website</h3>
                     </div>
                     <div class="project-tile">
+                        <a class="project-link" href="https://codepen.io/HanSolo0001/pen/bGrNKLG" target="_blank"><img class="project-img" src="./img/21-day-final-challenge-page.png" alt="21 day final challenge with Kevin Powell"></a>
                         <h3 class="project-title">Day 21 Final Challenge Kevin Powell</h3>
                     </div>
                 </div>
@@ -54,11 +59,17 @@
             <footer id="footer">
                 <h2 class="footer-contact">Contact me for feedback or questions.</h2>
                 <div class="profile-container">
-                    <a class="profile-link" id="profile-link" href="https://github.com/HanSolo0001" target="_blank">Github</a>
-                    <a class="profile-link" href="https://codepen.io/HanSolo0001" target="_blank">CodePen</a>
-                    <a class="profile-link" href="mailto:pillarite@gmail.com" target="_blank">Email Me</a>
+                    <div class="social">
+                        <a class="profile-link" id="profile-link" href="https://github.com/HanSolo0001" target="_blank"><img class="social-logo" src="./img/GitHub-Mark-64px.png" alt="github logo">Github</a>
+                    </div>
+                    <div class="social">
+                        <a class="profile-link" href="https://codepen.io/HanSolo0001" target="_blank"><img class="social-logo" src="./img/codepen_icon.png" alt="codepen logo">CodePen</a>
+                    </div>
+                    <div class="social">
+                        <a class="profile-link" href="mailto:pillarite@gmail.com" target="_blank"><img class="social-logo" src="./img/icons8-email-64.png" alt="email me">Email Me</a>
+                    </div>
                 </div>
-                <p>&copy; 2022 All Rights Reserved</p>
+                <p class="footer-copyright">&copy; 2022 All Rights Reserved</p>
             </footer>
         </section>
     </div>
